lib/lme.h

typedef bool (*InferenceCancelCallback)(const void* AUserData);
typedef void (*InferenceTokenCallback)(const wchar_t* AToken,
  const void* AUserData);
typedef void (*InfoCallback)(int ALevel, const wchar_t* AText,
  const void* AUserData);
typedef bool (*LoadModelProgressCallback)(const wchar_t* AModelName,
  float AProgress, const void* AUserData);
typedef void (*LoadModelCallback)(const wchar_t* AModelName, bool ASuccess,
  const void* AUserData);
typedef void (*InferenceStartCallback)(const void* AUserData);
typedef void (*InferenceEndCallback)(const void* AUserData);
/// <summary>
///   Sets the current speech voice rate.
/// </summary>
/// <param name="ARate">
///   The rate to set.
/// </param>
void SetSpeechRate(float ARate);
/// <summary>
///   Gets the current speech voice rate.
/// </summary>
/// <returns>
///   The current rate.
/// </returns>
float GetSpeechRate();
/// <summary>
///   Clears the current speech voice.
/// </summary>
void ClearSpeech();
/// <summary>
///   Speaks text in the current speech voice.
/// </summary>
/// <param name="AText">
///   The text to be spoken.
/// </param>
/// <param name="APurge">
///   If True, purges the current speech before speaking.
/// </param>
void SaySpeech(const wchar_t* AText, bool APurge);
/// <summary>
///   Checks if the current speech voice is active.
/// </summary>
/// <returns>
///   True if the speech voice is active, otherwise False.
/// </returns>
bool IsSpeechActive();
/// <summary>
///   Pauses the current speech voice.
/// </summary>
void PauseSpeech();
/// <summary>
///   Resumes the current speech voice.
/// </summary>
void ResumeSpeech();
/// <summary>
///   Resets the current speech voice.
/// </summary>
void ResetSpeech();
/// <summary>
///   Adds a word phrase to be substituted in speech.
/// </summary>
/// <param name="AWord">
///   The word to be substituted.
/// </param>
/// <param name="ASubstituteWord">
///   The substitute word.
/// </param>
void SubstituteSpeechWord(const wchar_t* AWord,
  const wchar_t* ASubstituteWord);
/// <summary>
///   Gets the version information.
/// </summary>
/// <param name="AType">
///   The type of version information to retrieve.
/// </param>
/// <returns>
///   The version information as a string.
/// </returns>
const wchar_t* GetVersionInfo(unsigned char AType);
/// <summary>
///   Clears the last error message.
/// </summary>
void ClearError();
/// <summary>
///   Sets an error message.
/// </summary>
/// <param name="AText">
///   The error message to set.
/// </param>
void SetError(const wchar_t* AText);
/// <summary>
///   Gets the last error message.
/// </summary>
/// <returns>
///   The last error message as a string.
/// </returns>
const wchar_t* GetError();
/// <summary>
///   Gets the inference cancel callback.
/// </summary>
/// <returns>
///   The inference cancel callback.
/// </returns>
InferenceCancelCallback GetInferenceCancelCallback();
/// <summary>
///   Sets the inference cancel callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void SetInferenceCancelCallback(InferenceCancelCallback AHandler,
  const void* AUserData);
/// <summary>
///   Gets the inference token callback.
/// </summary>
/// <returns>
///   The inference token callback.
/// </returns>
InferenceTokenCallback GetInferenceTokenCallback();
/// <summary>
///   Sets the inference token callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void SetInferenceTokenlCallback(InferenceTokenCallback AHandler,
  const void* AUserData);
/// <summary>
///   Gets the information callback.
/// </summary>
/// <returns>
///   The information callback.
/// </returns>
InfoCallback GetInfoCallback();
/// <summary>
///   Sets the information callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void SetInfoCallback(InfoCallback AHandler, const void* AUserData);
/// <summary>
///   Gets the load model progress callback.
/// </summary>
/// <returns>
///   The load model progress callback.
/// </returns>
LoadModelProgressCallback GetLoadModelProgressCallback();
/// <summary>
///   Sets the load model progress callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void SetLoadModelProgressCallback(LoadModelProgressCallback AHandler,
  const void* AUserData);
/// <summary>
///   Gets the load model callback.
/// </summary>
/// <returns>
///   The load model callback.
/// </returns>
LoadModelCallback GetLoadModelCallback();
/// <summary>
///   Sets the load model callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void SetLoadModelCallback(LoadModelCallback AHandler,
  const void* AUserData);
/// <summary>
///   Gets the inference start callback.
/// </summary>
/// <returns>
///   The inference start callback.
/// </returns>
InferenceStartCallback GetInferenceStartCallback();
/// <summary>
///   Sets the inference start callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void SetInferenceStartCallback(InferenceStartCallback AHandler,
  const void* AUserData);
/// <summary>
///   Gets the inference end callback.
/// </summary>
/// <returns>
///   The inference end callback.
/// </returns>
InferenceEndCallback GetInferenceEndCallback();
/// <summary>
///   Sets the inference end callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void SetInferenceEndCallback(InferenceEndCallback AHandler,
  const void* AUserData);
/// <summary>
///   Initializes configuration settings.
/// </summary>
/// <param name="AModelPath">
///   The path to the model.
/// </param>
/// <param name="ANumGPULayers">
///   The number of GPU layers.
/// </param>
void InitConfig(const wchar_t* AModelPath, int ANumGPULayers);
/// <summary>
///   Saves configuration settings to a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to save the configuration to.
/// </param>
/// <returns>
///   True if the configuration was saved successfully, otherwise False.
/// </returns>
bool SaveConfig(const wchar_t* AFilename);
/// <summary>
///   Loads configuration settings from a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to load the configuration from.
/// </param>
/// <returns>
///   True if the configuration was loaded successfully, otherwise False.
/// </returns>
bool LoadConfig(const wchar_t* AFilename);
/// <summary>
///   Clears all inference messages.
/// </summary>
void ClearAllMessages();
/// <summary>
///   Adds a new inference message.
/// </summary>
/// <param name="ARole">
///   The role of the message.
/// </param>
/// <param name="AContent">
///   The content of the message.
/// </param>
/// <returns>
///   The message ID.
/// </returns>
int AddMessage(const wchar_t* ARole, const wchar_t* AContent);
/// <summary>
///   Gets the last user role inference message.
/// </summary>
/// <returns>
///   The last user role inference message.
/// </returns>
const wchar_t* GetLastUserMessage();
/// <summary>
///   Returns an inference prompt for the specified model from current messages.
/// </summary>
/// <param name="AModelName">
///   The name of the model.
/// </param>
/// <returns>
///   The inference prompt.
/// </returns>
const wchar_t* BuildMessageInferencePrompt(const wchar_t* AModelName);
/// <summary>
///   Clears all model definitions.
/// </summary>
void ClearModelDefines();
/// <summary>
///   Adds a model definition.
/// </summary>
/// <param name="AModelFilename">
///   The filename of the model.
/// </param>
/// <param name="AModelName">
///   The name of the model.
/// </param>
/// <param name="AMaxContext">
///   The maximum context size.
/// </param>
/// <param name="ATemplate">
///   The template for the model.
/// </param>
/// <param name="ATemplateEnd">
///   The end template for the model.
/// </param>
/// <returns>
///   The model ID.
/// </returns>
int DefineModel(const wchar_t* AModelFilename, const wchar_t* AModelName,
  unsigned int AMaxContext, const wchar_t* ATemplate,
  const wchar_t* ATemplateEnd);
/// <summary>
///   Saves all model definitions to a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to save the definitions to.
/// </param>
/// <returns>
///   True if the definitions were saved successfully, otherwise False.
/// </returns>
bool SaveModelDefines(const wchar_t* AFilename);
/// <summary>
///   Loads model definitions from a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to load the definitions from.
/// </param>
/// <returns>
///   True if the definitions were loaded successfully, otherwise False.
/// </returns>
bool LoadModelDefines(const wchar_t* AFilename);
/// <summary>
///   Loads the specified model.
/// </summary>
/// <param name="AModelName">
///   The name of the model.
/// </param>
/// <returns>
///   True if the model was loaded successfully, otherwise False.
/// </returns>
bool LoadModel(const wchar_t* AModelName);
/// <summary>
///   Checks if a model is currently loaded.
/// </summary>
/// <returns>
///   True if a model is loaded, otherwise False.
/// </returns>
bool IsModelLoaded();
/// <summary>
///   Unloads the currently loaded model.
/// </summary>
void UnloadModel();
/// <summary>
///   Runs inference on the currently loaded model.
/// </summary>
/// <param name="AModelName">
///   The name of the model.
/// </param>
/// <param name="AMaxTokens">
///   The maximum number of tokens.
/// </param>
/// <returns>
///   True if the inference was run successfully, otherwise False.
/// </returns>
bool RunInference(const wchar_t* AModelName, unsigned int AMaxTokens);
/// <summary>
///   Gets the inference response from the currently loaded model.
/// </summary>
/// <returns>
///   The inference response.
/// </returns>
const wchar_t* GetInferenceResponse();