lib/lme.pas


/// <summary>
///   Sets the current speech voice rate.
/// </summary>
/// <param name="ARate">
///   The rate to set.
/// </param>
procedure SetSpeechRate(const ARate: Single); cdecl; external LME_DLL;

/// <summary>
///   Gets the current speech voice rate.
/// </summary>
/// <returns>
///   The current rate.
/// </returns>
function GetSpeechRate(): Single; cdecl; external LME_DLL;

/// <summary>
///   Clears the current speech voice.
/// </summary>
procedure ClearSpeech(); cdecl; external LME_DLL;

/// <summary>
///   Speaks text in the current speech voice.
/// </summary>
/// <param name="AText">
///   The text to be spoken.
/// </param>
/// <param name="APurge">
///   If True, purges the current speech before speaking.
/// </param>
procedure SaySpeech(const AText: PWideChar; const APurge: Boolean); cdecl;
  external LME_DLL;

/// <summary>
///   Checks if the current speech voice is active.
/// </summary>
/// <returns>
///   True if the speech voice is active, otherwise False.
/// </returns>
function IsSpeechActive(): Boolean; cdecl; external LME_DLL;

/// <summary>
///   Pauses the current speech voice.
/// </summary>
procedure PauseSpeech(); cdecl; external LME_DLL;

/// <summary>
///   Resumes the current speech voice.
/// </summary>
procedure ResumeSpeech(); cdecl; external LME_DLL;

/// <summary>
///   Resets the current speech voice.
/// </summary>
procedure ResetSpeech(); cdecl; external LME_DLL;

/// <summary>
///   Adds a word phrase to be substituted in speech.
/// </summary>
/// <param name="AWord">
///   The word to be substituted.
/// </param>
/// <param name="ASubstituteWord">
///   The substitute word.
/// </param>
procedure SubstituteSpeechWord(const AWord, ASubstituteWord: PWideChar);
  cdecl; external LME_DLL;

/// <summary>
///   Gets the version information.
/// </summary>
/// <param name="AType">
///   The type of version information to retrieve.
/// </param>
/// <returns>
///   The version information as a string.
/// </returns>
function GetVersionInfo(const AType: Byte): PWideChar; cdecl;
  external LME_DLL;

/// <summary>
///   Clears the last error message.
/// </summary>
procedure ClearError(); cdecl; external LME_DLL;

/// <summary>
///   Sets an error message.
/// </summary>
/// <param name="AText">
///   The error message to set.
/// </param>
procedure SetError(const AText: PWideChar); cdecl; external LME_DLL;

/// <summary>
///   Gets the last error message.
/// </summary>
/// <returns>
///   The last error message as a string.
/// </returns>
function GetError(): PWideChar; cdecl; external LME_DLL;

/// <summary>
///   Gets the inference cancel callback.
/// </summary>
/// <returns>
///   The inference cancel callback.
/// </returns>
function GetInferenceCancelCallback(): InferenceCancelCallback; cdecl;
  external LME_DLL;

/// <summary>
///   Sets the inference cancel callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure SetInferenceCancelCallback(
  const AHandler: InferenceCancelCallback; const AUserData: Pointer);
  cdecl; external LME_DLL;

/// <summary>
///   Gets the inference token callback.
/// </summary>
/// <returns>
///   The inference token callback.
/// </returns>
function GetInferenceTokenCallback(): InferenceTokenCallback; cdecl;
  external LME_DLL;

/// <summary>
///   Sets the inference token callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure SetInferenceTokenlCallback(
  const AHandler: InferenceTokenCallback; const AUserData: Pointer); cdecl;
  external LME_DLL;

/// <summary>
///   Gets the information callback.
/// </summary>
/// <returns>
///   The information callback.
/// </returns>
function GetInfoCallback(): InfoCallback; cdecl; external LME_DLL;

/// <summary>
///   Sets the information callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure SetInfoCallback(const AHandler: InfoCallback;
  const AUserData: Pointer); cdecl; external LME_DLL;

/// <summary>
///   Gets the load model progress callback.
/// </summary>
/// <returns>
///   The load model progress callback.
/// </returns>
function GetLoadModelProgressCallback(): LoadModelProgressCallback;
  cdecl; external LME_DLL;

/// <summary>
///   Sets the load model progress callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure SetLoadModelProgressCallback(
  const AHandler: LoadModelProgressCallback; const AUserData: Pointer);
  cdecl; external LME_DLL;

/// <summary>
///   Gets the load model callback.
/// </summary>
/// <returns>
///   The load model callback.
/// </returns>
function GetLoadModelCallback(): LoadModelCallback; cdecl;
  external LME_DLL;

/// <summary>
///   Sets the load model callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure SetLoadModelCallback(const AHandler: LoadModelCallback;
  const AUserData: Pointer); cdecl; external LME_DLL;

/// <summary>
///   Gets the inference start callback.
/// </summary>
/// <returns>
///   The inference start callback.
/// </returns>
function GetInferenceStartCallback(): InferenceStartCallback; cdecl;
  external LME_DLL;

/// <summary>
///   Sets the inference start callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure SetInferenceStartCallback(
  const AHandler: InferenceStartCallback; const AUserData: Pointer); cdecl;
  external LME_DLL;

/// <summary>
///   Gets the inference end callback.
/// </summary>
/// <returns>
///   The inference end callback.
/// </returns>
function GetInferenceEndCallback(): InferenceEndCallback; cdecl;
  external LME_DLL;

/// <summary>
///   Sets the inference end callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure SetInferenceEndCallback(const AHandler: InferenceEndCallback;
  const AUserData: Pointer); cdecl; external LME_DLL;

/// <summary>
///   Initializes configuration settings.
/// </summary>
/// <param name="AModelPath">
///   The path to the model.
/// </param>
/// <param name="ANumGPULayers">
///   The number of GPU layers.
/// </param>
procedure InitConfig(const AModelPath: PWideChar;
  const ANumGPULayers: Int32); cdecl; external LME_DLL;

/// <summary>
///   Saves configuration settings to a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to save the configuration to.
/// </param>
/// <returns>
///   True if the configuration was saved successfully, otherwise False.
/// </returns>
function SaveConfig(const AFilename: PWideChar): Boolean; cdecl;
  external LME_DLL;

/// <summary>
///   Loads configuration settings from a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to load the configuration from.
/// </param>
/// <returns>
///   True if the configuration was loaded successfully, otherwise False.
/// </returns>
function LoadConfig(const AFilename: PWideChar): Boolean; cdecl;
  external LME_DLL;

/// <summary>
///   Clears all inference messages.
/// </summary>
procedure ClearAllMessages(); cdecl; external LME_DLL;

/// <summary>
///   Adds a new inference message.
/// </summary>
/// <param name="ARole">
///   The role of the message.
/// </param>
/// <param name="AContent">
///   The content of the message.
/// </param>
/// <returns>
///   The message ID.
/// </returns>
function AddMessage(const ARole, AContent: PWideChar): Int32; cdecl;
  external LME_DLL;

/// <summary>
///   Gets the last user role inference message.
/// </summary>
/// <returns>
///   The last user role inference message.
/// </returns>
function GetLastUserMessage(): PWideChar; cdecl; external LME_DLL;

/// <summary>
///   Returns an inference prompt for the specified model from current messages.
/// </summary>
/// <param name="AModelName">
///   The name of the model.
/// </param>
/// <returns>
///   The inference prompt.
/// </returns>
function BuildMessageInferencePrompt(
  const AModelName: PWideChar): PWideChar; cdecl; external LME_DLL;

/// <summary>
///   Clears all model definitions.
/// </summary>
procedure ClearModelDefines(); cdecl; external LME_DLL;

/// <summary>
///   Adds a model definition.
/// </summary>
/// <param name="AModelFilename">
///   The filename of the model.
/// </param>
/// <param name="AModelName">
///   The name of the model.
/// </param>
/// <param name="AMaxContext">
///   The maximum context size.
/// </param>
/// <param name="ATemplate">
///   The template for the model.
/// </param>
/// <param name="ATemplateEnd">
///   The end template for the model.
/// </param>
/// <returns>
///   The model ID.
/// </returns>
function DefineModel(const AModelFilename, AModelName: PWideChar;
  const AMaxContext: UInt32; const ATemplate,
  ATemplateEnd: PWideChar): Int32; cdecl; external LME_DLL;

/// <summary>
///   Saves all model definitions to a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to save the definitions to.
/// </param>
/// <returns>
///   True if the definitions were saved successfully, otherwise False.
/// </returns>
function SaveModelDefines(const AFilename: PWideChar): Boolean; cdecl;
  external LME_DLL;

/// <summary>
///   Loads model definitions from a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to load the definitions from.
/// </param>
/// <returns>
///   True if the definitions were loaded successfully, otherwise False.
/// </returns>
function LoadModelDefines(const AFilename: PWideChar): Boolean; cdecl;
  external LME_DLL;

/// <summary>
///   Loads the specified model.
/// </summary>
/// <param name="AModelName">
///   The name of the model.
/// </param>
/// <returns>
///   True if the model was loaded successfully, otherwise False.
/// </returns>
function LoadModel(const AModelName: PWideChar): Boolean; cdecl;
  external LME_DLL;

/// <summary>
///   Checks if a model is currently loaded.
/// </summary>
/// <returns>
///   True if a model is loaded, otherwise False.
/// </returns>
function IsModelLoaded(): Boolean; cdecl; external LME_DLL;

/// <summary>
///   Unloads the currently loaded model.
/// </summary>
procedure UnloadModel(); cdecl; external LME_DLL;

/// <summary>
///   Runs inference on the currently loaded model.
/// </summary>
/// <param name="AModelName">
///   The name of the model.
/// </param>
/// <param name="AMaxTokens">
///   The maximum number of tokens.
/// </param>
/// <returns>
///   True if the inference was run successfully, otherwise False.
/// </returns>
function RunInference(const AModelName: PWideChar;
  const AMaxTokens: UInt32): Boolean; cdecl; external LME_DLL;

/// <summary>
///   Gets the inference response from the currently loaded model.
/// </summary>
/// <returns>
///   The inference response.
/// </returns>
function GetInferenceResponse(): PWideChar; cdecl; external LME_DLL;
